src/objects/SystemLog__c.object
<CustomObject>
    <description>Object used to store system errors</description>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SystemLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorLine__c</fullName>
        <label>Error Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LogDateTime__c</fullName>
        <label>Log Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>Method Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordName__c</fullName>
        <label>Record Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeverityLevel_Icon__c</fullName>
        <formula>CASE(UPPER(TEXT(SeverityLevel__c)), 
      &apos;ERROR&apos;, &apos;/img/msg_icons/error16.png&apos;,
      &apos;FATAL&apos;, &apos;/img/icon/wrench16.png&apos;,
      &apos;WARNING&apos;,&apos;/img/msg_icons/warning16.png&apos;,
      &apos;INFO&apos;,&apos;/img/msg_icons/info16.png&apos;,
      &apos;CONFIRM&apos;,&apos;/img/msg_icons/confirm16.png&apos; ,
      &apos;/img/func_icons/remove12.gif&apos;
    
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Severity Level Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeverityLevel_Image__c</fullName>
        <formula>IMAGE(  SeverityLevel_Icon__c , &apos;x&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Severity Level Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeverityLevel__c</fullName>
        <label>Severity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CONFIRM</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>FATAL</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>System Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LogDateTime__c</columns>
        <columns>ObjectName__c</columns>
        <columns>MethodName__c</columns>
        <columns>ErrorLine__c</columns>
        <columns>SeverityLevel__c</columns>
        <columns>SeverityLevel_Image__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SL-{0000000000}</displayFormat>
        <label>System Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>